[gd_scene load_steps=14 format=3 uid="uid://b6go021ha3ocr"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_b04gi"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ProblemSelection/problem_set_item.gd" id="3_1cbyy"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="4_dol4y"]
[ext_resource type="FontVariation" uid="uid://c5fyui7qqu420" path="res://Resources/Themes/line_edit.tres" id="4_lkw13"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/line_edit.gd" id="4_ylu82"]
[ext_resource type="Texture2D" uid="uid://cb6lapmtgwimd" path="res://Textures/UI/MiniDiagram/arrow_right.png" id="5_7dhmq"]
[ext_resource type="LabelSettings" uid="uid://dlhdoknev5ekj" path="res://Resources/Themes/uppercase_and_numbers.tres" id="5_iu731"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="6_plt5e"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="7_dyt28"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="7_f5yhf"]
[ext_resource type="Texture2D" uid="uid://qxw17ji0dvra" path="res://Textures/Buttons/icons/share.png" id="13_4yitn"]
[ext_resource type="Texture2D" uid="uid://co7w81osg53kf" path="res://Textures/UI/Information/valid.png" id="14_xqm6y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qxe7s"]
content_margin_top = 1.0
content_margin_bottom = 1.0

[node name="ProblemSetItem" type="PanelContainer" node_paths=PackedStringArray("title", "delete", "upload", "index_label", "completed", "play_button")]
material = ExtResource("1_b04gi")
offset_right = 300.0
offset_bottom = 29.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qxe7s")
script = ExtResource("3_1cbyy")
title = NodePath("VBoxContainer/HBoxContainer/HBoxContainer/Title")
delete = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Delete")
upload = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Upload")
index_label = NodePath("VBoxContainer/HBoxContainer/HBoxContainer3/IndexLabel")
completed = NodePath("VBoxContainer/HBoxContainer/HBoxContainer3/Completed")
play_button = NodePath("VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/Play")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Play" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("4_dol4y")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("5_7dhmq")
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/Play" instance=ExtResource("6_plt5e")]
tooltip = "Resume"

[node name="View" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("4_dol4y")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("7_f5yhf")

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/View" instance=ExtResource("6_plt5e")]
tooltip = "View Problems"

[node name="Title" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_lkw13")
placeholder_text = "[Enter Title]"
editable = false
script = ExtResource("4_ylu82")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 0
alignment = 2

[node name="IndexLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer3"]
use_parent_material = true
custom_minimum_size = Vector2(32, 2.08165e-12)
layout_mode = 2
text = "0/0"
label_settings = ExtResource("5_iu731")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Completed" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(7, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("14_xqm6y")
expand_mode = 5
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(44, 22)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0
alignment = 2

[node name="Delete" parent="VBoxContainer/HBoxContainer/HBoxContainer2" instance=ExtResource("4_dol4y")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("7_dyt28")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Delete" instance=ExtResource("6_plt5e")]
tooltip = "Delete"

[node name="Upload" parent="VBoxContainer/HBoxContainer/HBoxContainer2" instance=ExtResource("4_dol4y")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(22, 22)
action_mode = 1
icon = ExtResource("13_4yitn")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Upload" instance=ExtResource("6_plt5e")]
tooltip = "Share"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer/HBoxContainer/View" to="." method="_on_view_pressed"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/HBoxContainer/Title" to="." method="_on_title_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Upload" to="." method="_on_upload_pressed"]
